--- a/public/Music/Music.html
+++ b/public/Music/Music.html
@@ -26,7 +26,7 @@
 
       <div class="img-container">
         <img src="images/ukulele.jpg" alt="music-cover" id="cover" />
-      </div>²
+      </div>
       <div class="navigation">
         <button id="prev" class="action-btn">
           <i class="fas fa-backward"></i>
